Code review: change Deque to List
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/interpolation-model-checking@33576 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c